Improve route-settings overall usability on mobile. Fixes #228.

--- a/styles/typeahead.less
+++ b/styles/typeahead.less
@@ -21,6 +21,11 @@
 
   .tt-hint {
     background-color: @blue-lighter !important;
+    width: 100%;
+  }
+
+  .tt-input {
+    width: 100% !important;
   }
 }
 
@@ -96,7 +101,7 @@
         color: @gray;
       }
 
-      .color-ball {
+      .color-ball  {
         margin-top: 13px;
       }
     }
@@ -107,7 +112,6 @@
       margin: 0;
     }
   }
-
 
   // Small devices (tablets, 768px and up)
   // -------------------------------------
@@ -122,7 +126,6 @@
       width: @sidebar-sm-width - @sidebar-big-margin - @sidebar-header-closed-width;
     }
   }
-
 
   // Medium devices (desktops, 992px and up)
   // ----------------------------------------
